# Verdandi

./: .gitignore  README.md  Verdandi.sln
Verdandi/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugininterface.h
Verdandi.API/: Program.cs  Verdandi.API.csproj  Verdandi.API.http  appsettings.json
Verdandi.API/Context/: ApplicationDbContext.cs
Verdandi.API/Controllers/: DocumentsController.cs  FilesController.cs  GoalsController.cs  TasksController.cs  UsersController.cs
Verdandi.API/DTO/: CreateDocument.cs  CreateUser.cs  DocumentDto.cs  FilesDto.cs  GoalTaskDto.cs  UserDto.cs
Verdandi.API/Entities/: Document.cs  Files.cs  GoalsTasks.cs  User.cs
Verdandi.API/Migrations/: 20251212135145_GoalTasks.Designer.cs  20251212135145_GoalTasks.cs  20251214172541_Documents.Designer.cs  20251214172541_Documents.cs  20251220125616_DocsToFiles.Designer.cs  20251220125616_DocsToFiles.cs  20251221170217_FileNameLength.Designer.cs  20251221170217_FileNameLength.cs  ApplicationDbContextModelSnapshot.cs
Verdandi.API/Properties/: launchSettings.json
Verdandi/PluginExample/: CMakeLists.txt  PluginExample_global.h  pluginexample.cpp  pluginexample.h
